# slack-music-bot-rs

./: Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml
src/: index.rs  lib.rs  slack.rs
src/controllers/: mod.rs  slack.rs
src/services/: mod.rs  rest.rs  slack.rs
src/services/websockets/: mod.rs  ws_server.rs
src/utils/: fetch_song_info.rs  mod.rs  raw_request.rs  signature_verification.rs  slack_signature_verification.rs
