[package]
name = "slack_music_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
regex = "1"
lazy_static = "1.4.0"
mongodb = { version =  "2.0.0-beta.3", default-features = false, features= ["async-std-runtime"] }
bson = "1.2.3"
dotenv = "0.15.0"
actix = "0.10"
rand = "0.7"
actix-web-actors = "3"
